# sparkamp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  OSX.plan  README.md  dev.sparkamp.SparkAmp.yml  dev.sparkamp.Sparkamp.yml  next_steps.txt  requirements-osx.md  requirements.txt
.github/workflows/: build-dmg.yml  build.yml
docs/: android-mtp-device-support.md  mac-pass-checklist.md  refactor-plan.md
docs/superpowers/plans/: 2026-04-17-gtk-ui-fixes.md  2026-04-18-basic-skin-template.md  2026-06-13-portable-device-foundation.md  2026-06-18-device-logic-to-core.md  2026-06-23-ios-device-recognition.md  2026-06-23-macos-device-sync-parity.md  2026-06-23-optical-disc-support.md  2026-07-15-send-to-menu.md  2026-07-16-disc-ux-phase2.md  2026-07-17-phase0-fixes-pass.md  2026-07-18-phase1-metadata-foundations.md  2026-07-19-opus-handoff.md  2026-07-19-phase10-settings-cluster.md  2026-07-19-phase11-album-gallery.md  2026-07-19-phase12-lyrics.md  2026-07-19-phase2-album-art-EXEC.md  2026-07-19-phase2-album-art.md  2026-07-19-phase3-mpris-EXEC.md  2026-07-19-phase3-mpris-nowplaying.md  2026-07-19-phase4-replaygain-EXEC.md  2026-07-19-phase4-replaygain.md  2026-07-19-phase5-play-queue.md  2026-07-19-phase6-shortcuts.md  2026-07-19-phase7-playlist-ops.md  2026-07-19-phase8-watch-folders.md  2026-07-19-phase9-cdtext.md  2026-07-22-phase5-play-queue-EXEC.md
docs/superpowers/specs/: 2026-04-17-gtk-ui-fixes-design.md  2026-04-18-basic-skin-template-design.md  2026-06-13-portable-device-support-design.md  2026-07-15-send-to-menu-design.md  2026-07-16-disc-ux-phase2-design.md  2026-07-17-winamp-parity-roadmap-design.md
examples/: list_devices.rs
frontends/SparkampMac/: Info.plist
frontends/SparkampMac/Sources/: ArtworkWindow.swift  ContentView.swift  DeduplicatorWindow.swift  DeviceConflictSheet.swift  DeviceDetailView.swift  DeviceListView.swift  DeviceMenu.swift  DeviceService.swift  DiscDriveView.swift  DiscService.swift  EqualizerWindow.swift  FullscreenVisualizerWindow.swift  GraniteView.swift  Id3EditorWindow.swift  JumpToTrackView.swift  KeyboardShortcutsView.swift  MLEditorTable.swift  MLFilesTable.swift  MLPlaylistEditor.swift  MLPlaylistManagement.swift  MarqueeView.swift  MediaLibraryWindow.swift  PlayerWindow.swift  PlaylistView.swift  SettingsWindow.swift  SparkampMacApp.swift  SparkampModel+Dedupe.swift  SparkampModel+Devices.swift  SparkampModel+Discs.swift  SparkampModel+Keys.swift  SparkampModel+MediaLibrary.swift  SparkampModel+NowPlaying.swift  SparkampModel+Transport.swift  SparkampModel.swift  SparkampModelTypes.swift  TableSupport.swift  Theme+Guide.swift  Theme.swift  UnsupportedDeviceWatcher.swift  VisualizerView.swift
frontends/SparkampMac/SparkampCore/: sparkamp_bridge.h
frontends/SparkampMac/SparkampMac.xcodeproj/: project.pbxproj
frontends/gtk/: disc.rs  mod.rs  style.css  style_dark.css  style_light.css  window.rs
frontends/gtk/window/: art_window.rs  dedupe.rs  devices.rs  (+15 more)
frontends/macos/: Cargo.toml  build.rs  cbindgen.toml
frontends/macos/src/: lib.rs
frontends/tui/: id3.rs  keys.rs  media_library.rs  mod.rs  settings_eq.rs  tests.rs  ui.rs
include/: sparkamp.h
packaging/: README.md  cargo-sources.json  dev.sparkamp.SparkAmp.desktop  dev.sparkamp.SparkAmp.metainfo.xml  dev.sparkamp.Sparkamp.desktop  dev.sparkamp.Sparkamp.metainfo.xml
packaging/macos/: build-dmg.sh  entitlements.plist  export-options.plist
plugins/viz_granite/: Cargo.toml
plugins/viz_granite/src/: lib.rs
scripts/: flatpak-dev.sh  pre-release-check.sh  sync-version.sh
src/: config.rs  controller.rs  crash_log.rs  dedupe.rs  duration_cache.rs  duration_probe.rs  engine.rs  ffi.rs  filetype_plugin.rs  granite.rs  id3_editor.rs  lib.rs  loaded_plugin.rs  main.rs  media_library.rs  model.rs  mpris_meta.rs  now_playing.rs  pathutil.rs  plugin_abi.rs  plugin_manager.rs  plugin_settings.rs  queue.rs  replaygain.rs  shuffle.rs  skin.rs  tags.rs  technical_probe.rs  textutil.rs  timeutil.rs  viz_plugin.rs
src/devices/: browse.rs  detect.rs  diagnostics.rs  io.rs  marker.rs  mod.rs  plan.rs  sync.rs  transfer.rs
src/disc/: burn.rs  burnlist.rs  cdtext.rs  detect.rs  discid.rs  gnudb.rs  mod.rs  mount.rs  rip.rs  tagstore.rs  toc.rs  xmcd.rs
src/ffi/: dedupe.rs  devices.rs  disc.rs  eq.rs  granite.rs  id3.rs  media_library.rs  mod.rs  now_playing.rs  playback.rs  playlist.rs  queue.rs  settings.rs  viz.rs
src/granite/: beat.rs  ink.rs  maps.rs  mod.rs  palette.rs
src/gtk_ui/: mod.rs  style.css  style_dark.css  style_light.css  window.rs
src/media_library/: devices.rs  mod.rs  playlists.rs  queries.rs  scan.rs  tests.rs
src/skin_templates/: dark.css  light.css  skin-guide.md
src/tui/: mod.rs  ui.rs
tools/: embed-skin-guide.sh
(+19 files in other folders)
